# cpp-sensors-project

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
config/: server.json.example
docs/: README.md
include/sensors/: clickhouse_pool.hpp  http_server.hpp  metrics_export.hpp  redis_client.hpp  request_context.hpp  threadsafe_queue.hpp  time_utils.hpp  types.hpp
infra/monitoring/: docker-compose.yml  prometheus.yml
scripts/: loadgen.py
src/: clickhouse_pool.cpp  http_server.cpp  main.cpp  metrics_export.cpp  redis_client.cpp
tests/: test_time.cpp
